--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Party from stdout",
   "main": "index.js",
   "dependencies": {
-    "colors": "^1.1.2"
+    "colors": "^1.1.2",
+    "figlet": "^1.1.1"
   },
   "devDependencies": {},
   "scripts": {
